--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.Imp"
         tools:targetApi="31">
         <activity
+            android:name=".AdapterDemoFive.ActivityFive"
+            android:exported="false" />
+        <activity
+            android:name=".AdapterDemoFour.ActivityFour"
+            android:exported="false" />
+        <activity
             android:name=".AdapterDemoThree.ActivityThree"
             android:exported="false" />
         <activity
