--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.Imp"
         tools:targetApi="31">
         <activity
+            android:name=".AdapterDemoSix.ActivitySix"
+            android:exported="false" />
+        <activity
             android:name=".AdapterDemoFive.ActivityFive"
             android:exported="false" />
         <activity
